// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button /> set as disabled matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular y-button__state-disabled"
  classNames={Object {}}
  disabled={true}
  split={false}
  styles={Object {}}
>
  Click Me
</BaseButton>
`;

exports[`<Button /> with SMALL size matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-small"
  classNames={Object {}}
  split={false}
  styles={Object {}}
>
  Click Me
</BaseButton>
`;

exports[`<Button /> with SMALL size with icon matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-small"
  classNames={Object {}}
  split={false}
  styles={Object {}}
>
  <span
    className="y-button--icon-wrapper-left"
  >
    <Icon
      className="y-button--icon"
      icon="plus"
      size="12"
    />
  </span>
  Click Me
</BaseButton>
`;

exports[`<Button /> with additional className matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular TEST_CLASSNAME"
  classNames={Object {}}
  split={false}
  styles={Object {}}
>
  Click Me
</BaseButton>
`;

exports[`<Button /> with aria label matches its snapshot 1`] = `
<BaseButton
  ariaLabel="Aria description"
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular"
  classNames={Object {}}
  split={false}
  styles={Object {}}
>
  Click Me
</BaseButton>
`;

exports[`<Button /> with default options matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular"
  classNames={Object {}}
  split={false}
  styles={Object {}}
>
  Click Me
</BaseButton>
`;

exports[`<Button /> with fullWidth matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular y-button__fullWidth"
  classNames={Object {}}
  split={false}
  styles={Object {}}
>
  Click Me
</BaseButton>
`;

exports[`<Button /> with icon matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular"
  classNames={Object {}}
  split={false}
  styles={Object {}}
>
  <span
    className="y-button--icon-wrapper-left"
  >
    <Icon
      className="y-button--icon"
      icon="plus"
      size="14"
    />
  </span>
  Click Me
</BaseButton>
`;

exports[`<Button /> with icon on the right matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular"
  classNames={Object {}}
  split={false}
  styles={Object {}}
>
  Click Me
  <span
    className="y-button--icon-wrapper-right"
  >
    <Icon
      className="y-button--icon"
      icon="plus"
      size="14"
    />
  </span>
</BaseButton>
`;

exports[`<Button /> with invalid href matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular"
  classNames={Object {}}
  href="#"
  split={false}
  styles={Object {}}
>
  Click Me
</BaseButton>
`;

exports[`<Button /> with primary color matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-primary y-button__size-regular"
  classNames={Object {}}
  split={false}
  styles={Object {}}
>
  Click Me
</BaseButton>
`;

exports[`<Button /> with valid href matches its snapshot 1`] = `
<BaseButton
  baseClassName="ms-Button"
  className="y-button y-button__color-secondary y-button__size-regular"
  classNames={Object {}}
  href="https://www.yammer.com"
  split={false}
  styles={Object {}}
>
  Click Me
</BaseButton>
`;
